# barebox-bringup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  strategy-sdmux.py
barebox_bringup/: __init__.py  cli.py  strategy_utils.py
examples/: README.md  strategy-bootstrap.py  strategy-sdmux.py  test-unified-strategy.yaml
examples/arm/: imx6s-riotboard.yaml  sdmux-example.yaml
examples/qemu/: README.md  arm-virt.yaml  arm64-virt.yaml  x86-pc.yaml
